syntax = "proto3";
package trading;
option go_package = "github.com/rwh9609-bit/multilanguage/go/gen";

import "trading_api.proto"; // Reuse existing message definitions

// BotService provides a focused interface for bot lifecycle operations.
service BotService {
  rpc CreateBot(CreateBotRequest) returns (StatusResponse) {}
  rpc ListBots(Empty) returns (BotList) {}
  rpc StartBot(BotIdRequest) returns (StatusResponse) {}
  rpc StopBot(BotIdRequest) returns (StatusResponse) {}
  rpc GetBotStatus(BotIdRequest) returns (BotConfig) {}
}
